--- a/ScriptingLanguage.vcxproj.filters
+++ b/ScriptingLanguage.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="source\scriptfunc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
