--- a/ScriptingLanguage.vcxproj.filters
+++ b/ScriptingLanguage.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="source\parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\scriptrval.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
